--- a/src/components/Robot.css
+++ b/src/components/Robot.css
@@ -17,10 +17,8 @@
   right: 0;
   width: 40px;
   height: 40px;
-  margin: auto 0;
   font-size: 30px;
   color: #cc9a9a;
-  margin-bottom: 11px;
   transition: color 0.2s ease-out;
 }
 
@@ -30,11 +28,13 @@
 }
 
 .robot-container .destroy:after {
-  content: '×';
+  content: 'x';
 }
 
 .robot-container:hover .destroy {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 img {
